--- a/index.html
+++ b/index.html
@@ -10,33 +10,33 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/css/style.css">
 </head>
-<body class="bg-neutral-off-white flex flex-col items-center">
-  <div class="bg-neutral-white px-6 py-8 w-fit mt-16 rounded-2xl rounded-br-[120px]">
+<body class="bg-neutral-off-white flex flex-col items-center px-4">
+  <div class="bg-neutral-white px-6 py-8 max-w-xl w-full mt-16 rounded-2xl rounded-br-[120px]">
     <form action="">
 
       <!-- INPUTS -->
-      <div class="flex uppercase gap-x-5">
+      <div class="flex uppercase gap-x-5 md:gap-x-6">
         <!-- get rid of the counter on all the inputs and give them a transparent background with a border color of  -->
         <div class="flex flex-col gap-y-1">
           <label class="text-neutral-smoke text-sm font-bold" for="day">Day</label>
-          <input class="border border-neutral-grey rounded-md w-20 p-3 text-neutral-black font-bold focus:outline focus:outline-1 focus:outline-primary-purple" type="number" id="day" name="day" min="1" max="31" placeholder="DD" required>
+          <input class="border border-neutral-grey rounded-md w-20 md:w-24 p-3 text-neutral-black font-bold focus:outline focus:outline-1 focus:outline-primary-purple md:text-lg" type="number" id="day" name="day" min="1" max="31" placeholder="DD" required>
         </div>
       
         <div class="flex flex-col gap-y-1">
           <label class="text-neutral-smoke text-sm font-bold" for="month">Month</label>
-          <input class="border border-neutral-grey rounded-md w-20 p-3 text-neutral-black font-bold focus:outline focus:outline-1 focus:outline-primary-purple" type="number" id="month" name="month" min="1" max="12" placeholder="MM" required>
+          <input class="border border-neutral-grey rounded-md w-20 md:w-24 p-3 text-neutral-black font-bold focus:outline focus:outline-1 focus:outline-primary-purple md:text-lg" type="number" id="month" name="month" min="1" max="12" placeholder="MM" required>
         </div>
       
         <div class="flex flex-col gap-y-1">
           <label class="text-neutral-smoke text-sm font-bold" for="year">Year</label>
-          <input class="border border-neutral-grey rounded-md w-20 p-3 text-neutral-black font-bold focus:outline focus:outline-1 focus:outline-primary-purple" type="number" id="year" name="year" min="1000" max="9999" placeholder="YYYY" required>
+          <input class="border border-neutral-grey rounded-md w-20 md:w-24 p-3 text-neutral-black font-bold focus:outline focus:outline-1 focus:outline-primary-purple md:text-lg" type="number" id="year" name="year" min="1000" max="9999" placeholder="YYYY" required>
         </div>
       </div>  
 
       <!-- BUTTON -->
       <div class="relative flex justify-center mt-8">
         <hr>
-        <button class="z-10" type="submit">
+        <button class="z-10 md:ml-auto" type="submit">
           <div class="w-16 h-16 bg-primary-purple flex items-center justify-center rounded-full">
             <img class="scale-65" src="/assets/images/icon-arrow.svg" alt="button-icon">
           </div>
@@ -45,7 +45,7 @@
     </form>
 
     <!-- RESULT -->
-    <div class="text-5xl font-bold italic mt-8 mb-4">
+    <div class="text-5xl md:text-6xl font-bold italic mt-8 mb-4">
       <p><span id="yearValue" class="text-primary-purple">--</span> years</p>
       <p><span id="monthValue" class="text-primary-purple">--</span> months</p>
       <p><span id="dayValue" class="text-primary-purple">--</span> days</p>
