--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body class="bg-neutral-off-white flex flex-col items-center px-4">
   <div class="bg-neutral-white px-6 py-8 max-w-xl w-full mt-16 rounded-2xl rounded-br-[120px]">
-    <form action="">
+    <form id="form" action="">
 
       <!-- INPUTS -->
       <div class="flex uppercase gap-x-5 md:gap-x-6">
@@ -55,5 +55,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
+  <script type="module" src="script.js"></script>
 </body>
 </html>
