sty;e: styled invalid inputs

--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
         <!-- get rid of the counter on all the inputs and give them a transparent background with a border color of  -->
         <div class="flex flex-col gap-y-1">
           <label class="text-neutral-smoke text-sm font-bold" for="day">Day</label>
-          <input class="border border-neutral-grey rounded-md w-20 md:w-24 p-3 text-neutral-black font-bold focus:outline focus:outline-1 focus:outline-primary-purple md:text-lg" type="number" id="day" name="day" min="1" max="31" placeholder="DD" required>
+          <input class="border border-neutral-grey rounded-md w-20 md:w-24 p-3 text-neutral-black font-bold focus:outline focus:outline-1 focus:outline-primary-purple md:text-lg input-invalid" type="number" id="day" name="day" min="1" max="31" placeholder="DD" required>
         </div>
       
         <div class="flex flex-col gap-y-1">
           <label class="text-neutral-smoke text-sm font-bold" for="month">Month</label>
-          <input class="border border-neutral-grey rounded-md w-20 md:w-24 p-3 text-neutral-black font-bold focus:outline focus:outline-1 focus:outline-primary-purple md:text-lg" type="number" id="month" name="month" min="1" max="12" placeholder="MM" required>
+          <input class="border border-neutral-grey rounded-md w-20 md:w-24 p-3 text-neutral-black font-bold focus:outline focus:outline-1 focus:outline-primary-purple md:text-lg input-invalid" type="number" id="month" name="month" min="1" max="12" placeholder="MM" required>
         </div>
       
         <div class="flex flex-col gap-y-1">
           <label class="text-neutral-smoke text-sm font-bold" for="year">Year</label>
-          <input class="border border-neutral-grey rounded-md w-20 md:w-24 p-3 text-neutral-black font-bold focus:outline focus:outline-1 focus:outline-primary-purple md:text-lg" type="number" id="year" name="year" min="1000" max="9999" placeholder="YYYY" required>
+          <input class="border border-neutral-grey rounded-md w-20 md:w-24 p-3 text-neutral-black font-bold focus:outline focus:outline-1 focus:outline-primary-purple md:text-lg input-invalid" type="number" id="year" name="year" min="1000" max="9999" placeholder="YYYY" required>
         </div>
       </div>  
 
